Migrate to fluent lombok getters and setters